Added slider menu

--- a/styles/main.css
+++ b/styles/main.css
@@ -11,11 +11,9 @@ body {
 
 .navbar-top {
   background-color: var(--main-color);
-  padding: 0;
-}
-
-.navbar-top .brand-wrapper {
-  padding-left: 1rem;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  justify-content: flex-start;
 }
 
 .navbar-top .form-control {
@@ -65,45 +63,60 @@ body {
   border-radius: 0px;
 }
 
-.left-bar {
-  border-right-style: solid;
-  border-right-width: 1px;
-  border-right-color: #DFDFDF;
-  width: inherit;
-}
-
-.menu .list-group .active {
+.btn-menu {
   color: var(--text-color);
-  background-color: #FFFFFF;
 }
 
-.menu .list-group-item {
-  background-color: transparent;
-  padding: 0.4rem;
-  margin: 0.2rem;
-}
-
-.menu .list-group-item:first-child {
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
-}
-
-.menu {
-  padding: 1rem;
-  height: inherit;
-  position: fixed;
-  width: 16%;
-}
-
-.menu a {
-  color: var(--text-color);
-  font-family: 'Montserrat', sans-serif;
-  font-size: 18px;
-  font-weight: 600;
-}
-
-.menu a:hover {
+.btn-menu:hover {
   color: #000000;
+}
+
+.sideNav {
+  width: inherit;
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+}
+
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1500;
+  top: 0;
+  left: 0;
+  background-color: #FFFFFF;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+}
+
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
 }
 
 .row-posts {
