--- a/styles/main.css
+++ b/styles/main.css
@@ -93,7 +93,7 @@ body {
   margin-left: 50px;
 }
 
-.category-choose a {
+.category-choose a, .slide-arrow {
   font-family: 'Montserrat', sans-serif;
   font-size: 14px;
   font-weight: 600;
@@ -171,6 +171,10 @@ h4 {
   text-align: center;
 }
 
+.tool-panel .rate {
+  width: 45px;
+}
+
 .tool-panel .rate .btn-link {
   color: var(--text-color);
   font-size: 12px;
@@ -182,30 +186,6 @@ h4 {
 
 .tool-panel .rate .btn-down:hover {
   color: red;
-}
-
-.btn-viewall {
-  width: 100%;
-  height: 100%;
-  color: var(--text-color);
-  background-color: var(--main-color);
-  border-color: var(--main-color);
-  border-style: none;
-  border-radius: 0px;
-}
-
-.btn-viewall:hover {
-  color: var(--main-color);
-  background-color: var(--text-color);
-  border-radius: 0px;
-}
-
-.btn-viewall:focus, .btn-viewall:active {
-  color: var(--main-color);
-  background-color: var(--text-color);
-  border-color: var(--text-color);
-  box-shadow: 0 0 0 .2rem rgba(5, 56, 107, 0.5);
-  border-radius: 0px;
 }
 
 .divider {
